--- a/admin/assets/css/componentes/main.css
+++ b/admin/assets/css/componentes/main.css
@@ -1,24 +1,76 @@
 .tabela{
     display: flex;
     justify-content: center;
-}
-thead{
-    display: flex;
+    margin: 22rem;
+    margin-top: 2.25rem;
+    width: 60%;
+    background-color: var(--cor-contraste-claro);
+    border-radius: 10px;
     box-shadow: var(--sombra);
-    background-color: white;
-    border-radius: 12px;
-    padding: 18px;
+    border-collapse: initial;
+    text-align: left;
+    flex-direction: column;
 }
-tr{
-    display: flex;
-    align-items: center;
+
+
+
+
+
+.tabela td:first-of-type, .tabela th:first-of-type { 
+    padding-left: 1.75rem; 
 }
-.tabela-coluna--p{
-    display: flex;
-    margin-right: 40px;
+
+.tabela td:last-of-type, .tabela th:last-of-type { 
+    padding-right: 1.75rem; 
 }
-.tabela-coluna--m{
+
+.tabela thead { 
+    font-size: var(--fonte-tamanho-tabela-cabecalho);
+ }
+
+.tabela th {
+    padding-top: 1.75rem; padding-bottom: 1.75rem; 
+ }
+
+.tabela td { 
+    padding-top: 1rem; padding-bottom: 1rem; 
+}
+
+.tabela__alinhamento--direita { 
+    text-align: right; 
+}
+
+.tabela__coluna--p { 
+    width: 20%; 
+}
+
+.tabela__coluna--m { 
+    width: 25%; 
+}
+
+.tabela__coluna--g { 
+    width: 50%; 
+}
+
+.tabela tr:last-of-type td { 
+    padding-bottom: 1.75rem; 
+}
+
+.tabela__botoes-controle { 
+    display: flex; align-items: center; justify-content: flex-end; 
+}
+
+.tabela__botoes-controle li:first-of-type { 
+    margin-right: 2.25rem; 
+}
+
+.td { 
+    padding: 1rem; 
+}
+
+
+tr {
     display: flex;
-    margin-left: 200px;
-    color: var(--cor-primaria)
+    justify-content: space-between;
+    border-bottom: 1px solid var(--cor-secundaria);
 }
