--- a/admin/assets/css/base/base.css
+++ b/admin/assets/css/base/base.css
@@ -17,3 +17,27 @@ body{
 .flex{
     display: flex;
 }
+
+.flex--centro{
+    align-items: center;
+    justify-content: center;
+}
+
+.flex--coluna{
+    flex-direction: column;
+}
+
+@media (min-width: 800px) {
+    .container{
+        padding-right: 2.5rem;
+        padding-left: 2.5rem;
+    }
+
+}
+
+@media (min-width: 120px){
+    .container{
+        padding-left: calc((100vw - 900px)/2);
+        padding-right: calc((100vw - 900px)/2);
+    }
+}
