--- a/admin/assets/css/componentes/cadastro.css
+++ b/admin/assets/css/componentes/cadastro.css
@@ -3,7 +3,7 @@
     margin: auto;
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 30%;
     border-radius: 12px;
     padding: 40px;
     gap: 16px;
@@ -15,13 +15,19 @@
 h2{
     font-size: 20px;
     font-weight: 700px;
+    border-bottom: 1px solid gray;
+    width: 100%;
+    height: 50px;
+    align-items: center;
+    display: flex;
 }
 .botao_cadastro{
-    font-size: 12px;
+    font-size: 18px;
     display: flex;
     justify-content: center;
     align-self: center;
-    width: 16%;
+    width: 32%;
+    align-items: center;
     padding: 16px 30px;
     background-color: var(--cor-primaria);
     color: white;
@@ -31,4 +37,56 @@ h2{
     display: flex;
     flex-direction: column;
     gap: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+.textarea{
+    box-sizing: border-box;
+    border: 1px solid var(--cor-secundaria);
+    padding: 0.5rem;
+    border-radius: 7px;
+    width: 100%;
+}
+
+.textarea-container{
+    position: relative;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    font-weight: var(--fonte-peso-input);
+}
+
+.textarea::placeholder{
+    visibility: hidden;
+}
+
+.textarea:focus{
+    outline: none;
+}
+
+.textarea-label{
+    position: absolute;
+    top: 0.5rem;
+    left: 0.5rem;
+    font-size: var(--fonte-tamanho-input-label);
+    transition: all 0.25s;
+}
+
+.textarea:not(:placeholder-shown) + textarea.label, 
+.textarea:focus + .textarea-label {
+    font-size: 0.875rem;
+    top: -1.25rem;
+    transition: all 0.25s;
+}
+
+.textarea-container--invalido{
+    margin-bottom: 0.5rem;
+}
+
+.textarea-container--invalido .textarea{
+    border: 1px solid var(--cor-aviso);
+}
+
+.textarea-container--invalido .textarea-label{
+    color: var(--cor-aviso);
 }
